@@ -13,6 +13,7 @@ v8.0.32
 
 - WL#15348: Support MIT Kerberos library on Windows
 - WL#15036: Support for type hints
+- BUG#34710366: Django implementation does not pass unit tests
 - BUG#34689812: Fix datetime conversion when using prepared cursors
 - BUG#34556157: Kerberos authorization fails when using SSPI as security interface
 - BUG#34499578: MySQLCursor.executemany() fails to correctly identify BULK data loading ops
